[project]
name = "urlaub"
version = "0.1.0"
description = "URL, and useful bits"
readme = "README.md"
license = "ISC"
authors = [
  { name = "Nikita Karamov", email = "me@kytta.dev" },
]
requires-python = ">=3.9"
dependencies = [  ]

[build-system]
build-backend = "flit_core.buildapi"
requires = [ "flit-core>=3.2,<4" ]
